Version 1.1.10 (released ??-???-????)

  * fix errors viewing remote Subversion paths with URI-unsafe characters
  * fix regexp input validation (issue #426, #427, #440)

Version 1.0.9 (released 11-Aug-2009)

  * security fix: validate the 'view' parameter to avoid XSS attack
  * security fix: avoid printing illegal parameter names and values

Version 1.0.8 (released 05-May-2009)

  * fix directory view sorting UI
  * tolerate malformed Accept-Language headers (issue #396)
  * fix directory log views in revision-less Subversion repositories
  * fix exception in rev-sorted remote Subversion directory views (issue #409)

Version 1.0.7 (released 14-Oct-2008)

  * fix regression in the 'as text' download view (issue #373)

Version 1.0.6 (released 16-Sep-2008)

  * security fix: ignore arbitrary user-provided MIME types (issue #354)
  * fix bug in regexp search filter when used with sticky tag (issue #346)
  * fix bug in handling of certain 'co' output (issue #348)
  * fix regexp search filter template bug
  * fix annotate code syntax error
  * fix mod_python import cycle (issue #369)

Version 1.0.5 (released 28-Feb-2008)

  * security fix: omit commits of all-forbidden files from query results
  * security fix: disallow direct URL navigation to hidden CVSROOT folder
  * security fix: strip forbidden paths from revision view
  * security fix: don't traverse log history thru forbidden locations
  * security fix: honor forbiddenness via diff view path parameters
  * new 'forbiddenre' regexp-based path authorization feature
  * fix root name conflict resolution inconsistencies (issue #287)
  * fix an oversight in the CVS 1.12.9 loginfo-handler support
  * fix RSS feed content type to be more specific (issue #306)
  * fix entity escaping problems in RSS feed data (issue #238)
  * fix bug in tarball generation for remote Subversion repositories
  * fix query interface file-count-limiting logic
  * fix query results plus/minus count to ignore forbidden files